# Detect_Smoke_with_ROS

src/Detect_smoke_with_ROS/: README.md  husky_test.tar.xz
src/Detect_smoke_with_ROS/data/: without_steam.txt
src/Detect_smoke_with_ROS/hmm_model/: CMakeLists.txt  package.xml
src/Detect_smoke_with_ROS/hmm_model/src/: hmm_train.py  khaled_log.txt
src/Detect_smoke_with_ROS/husky_test/: CMakeLists.txt  husky_sim_setup.txt  package.xml
src/Detect_smoke_with_ROS/husky_test/launch/: husky_empty_world.launch  husky_empty_world_smoke.launch
src/Detect_smoke_with_ROS/husky_test/world/: Test_Haus_final  a5er_a5er  a5er_edit_world  finaaaaaaal_isa  husky_testworld  husky_testworld_particles  saeid_wtf
src/Detect_smoke_with_ROS/husky_test/world/Testhaus1/: model.config  model.sdf
src/Detect_smoke_with_ROS/husky_test/world/a5er_edit/: model.config  model.sdf
src/Detect_smoke_with_ROS/husky_test/world/khaled_model/: model.config  model.sdf
src/Detect_smoke_with_ROS/husky_test/world/saeid_model/: model.config  model.sdf
src/Detect_smoke_with_ROS/khaled_model_hmm/: CMakeLists.txt  package.xml
src/Detect_smoke_with_ROS/khaled_model_hmm/src/: hmm_train.py  khaled_log.txt  khaled_log1.txt  khaled_log11.txt  train.pkl
src/Detect_smoke_with_ROS/laser2pc/: CMakeLists.txt  README  package.xml
src/Detect_smoke_with_ROS/laser2pc/src/: laser2pc.py
src/Detect_smoke_with_ROS/lmsxxGPU/: CMakeLists.txt  package.xml
src/Detect_smoke_with_ROS/pcl_cpp_tutorial/: CMakeLists.txt  package.xml
src/Detect_smoke_with_ROS/pcl_cpp_tutorial/src/: edite_example.cpp  example.cpp  khaled.cpp  khaled_log245.txt
src/Detect_smoke_with_ROS/youbot_simulations/Worlds/: .test_gpu_laser.world.swp  lensflare_plugin.world  navigation_test_world.world  smoke_test_bullet.world  smoke_test_ode.world  test_gpu_laser.world
src/Detect_smoke_with_ROS/youbot_simulations/Worlds/navigation_test_world/: model.config  model.sdf
src/Detect_smoke_with_ROS/youbot_simulations/camera_effect_plugin/: CMakeLists.txt  package.xml
src/Detect_smoke_with_ROS/youbot_simulations/camera_effect_plugin/src/: CameraEffectPlugin.cpp  CameraEffectPlugin.h
src/Detect_smoke_with_ROS/youbot_simulations/camera_effect_plugin/srv/: ColorSwap.srv
src/Detect_smoke_with_ROS/youbot_simulations/gazebo_smoke_spawn_plugin/: CMakeLists.txt  smoke_spawn_plugin.cc  test.world
src/Detect_smoke_with_ROS/youbot_simulations/gpu_laser_collision_test/: CMakeLists.txt  package.xml
src/Detect_smoke_with_ROS/youbot_simulations/gpu_laser_collision_test/src/: GpuLaserCollisionPlugin.cpp  GpuLaserCollisionPlugin.h  material.config
src/Detect_smoke_with_ROS/youbot_simulations/gpu_laser_collision_test/src/test/: GpuLaserCollisionTestPlugin.cpp  GpuLaserCollisionTestPlugin.h
src/Detect_smoke_with_ROS/youbot_simulations/gpu_laser_sensor_particle_plugin/: CMakeLists.txt  package.xml
src/Detect_smoke_with_ROS/youbot_simulations/gpu_laser_sensor_particle_plugin/src/: GpuLaserSensorParticlePlugin.cpp  GpuLaserSensorParticlePlugin.h
src/Detect_smoke_with_ROS/youbot_simulations/mock_vision/: CMakeLists.txt  package.xml
src/Detect_smoke_with_ROS/youbot_simulations/mock_vision/config/: camera_params.yaml
src/Detect_smoke_with_ROS/youbot_simulations/mock_vision/src/: gazebo_mock_vision_old.cpp  mock_vision_camera_plugin.cpp  mock_vision_camera_plugin.h
src/Detect_smoke_with_ROS/youbot_simulations/model_particle_plugin/: CMakeLists.txt  package.xml
src/Detect_smoke_with_ROS/youbot_simulations/model_particle_plugin/particle_model/: model.config  model.sdf
src/Detect_smoke_with_ROS/youbot_simulations/model_particle_plugin/src/: ModelParticlePlugin.cpp  ModelParticlePlugin.h
src/Detect_smoke_with_ROS/youbot_simulations/models/M20_100/: model.config  model.sdf
src/Detect_smoke_with_ROS/youbot_simulations/models/hokuyo_gpu/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
src/Detect_smoke_with_ROS/youbot_simulations/models/wall_obstacle/: model.config  model.sdf
src/Detect_smoke_with_ROS/youbot_simulations/models/wall_test_1/: model.config  model.sdf  wall_test_1.world
src/Detect_smoke_with_ROS/youbot_simulations/models/wall_test_2/: model.config  model.sdf
src/Detect_smoke_with_ROS/youbot_simulations/script/: analyse_topic_statistics.py  collect_info.sh  rostopic_analyzer.py  start_rosbag.sh
src/Detect_smoke_with_ROS/youbot_simulations/simple_follower_plugins/: CMakeLists.txt  package.xml
src/Detect_smoke_with_ROS/youbot_simulations/simple_follower_plugins/include/simple_follower_plugins/: simple_line_follower.h
src/Detect_smoke_with_ROS/youbot_simulations/simple_follower_plugins/src/: simple_line_follower.cpp  simple_object_follower.py
src/Detect_smoke_with_ROS/youbot_simulations/simulation_message_modulation/: CMakeLists.txt  package.xml
src/Detect_smoke_with_ROS/youbot_simulations/simulation_message_modulation/src/: camera_image_modulation.cpp  camera_image_modulation.h  camera_image_modulation.py
src/Detect_smoke_with_ROS/youbot_simulations/simulation_msgs/: CMakeLists.txt  package.xml
src/Detect_smoke_with_ROS/youbot_simulations/simulation_msgs/srv/: LaserParticle.srv  Material.srv  Scanner.srv
src/Detect_smoke_with_ROS/youbot_simulations/tracker_auto_sim/: CMakeLists.txt  locations.yaml  package.xml
src/Detect_smoke_with_ROS/youbot_simulations/tracker_auto_sim/config/: amcl_params.yaml  costmap_common_params.yaml  dwa_local_planner.yaml  global_costmap_params.yaml  gmapping_params.yaml  local_costmap_params.yaml
src/Detect_smoke_with_ROS/youbot_simulations/tracker_auto_sim/launch/: evaluator.launch  generate_testfiles.launch  move_base.launch  start_all.launch  test.world  tracker_gazebo.launch
src/Detect_smoke_with_ROS/youbot_simulations/tracker_auto_sim/map/: test.pgm  test_messe_demo.pgm
src/Detect_smoke_with_ROS/youbot_simulations/tracker_auto_sim/src/: base_bumper_counter.py  initial_pose_setter.py  move_base_client.py  move_base_multiple_goal_client.py
src/Detect_smoke_with_ROS/youbot_simulations/youbot_sim_launcher/: CMakeLists.txt  fix_rosbags.txt  package.xml
(+385 files in other folders)
