<?xml version="1.0"?>
<package>
  <name>mock_vision</name>
  <version>0.0.0</version>
  <description>The luh_gazebo_mock_vision package</description>

  <maintainer email="alex@todo.todo">alex</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>observer</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <!--build_depend>imes_3d_vision</build_depend>
  <build_depend>luh_youbot_gripper</build_depend>
  <build_depend>luh_youbot_message</build_depend>  
  <build_depend>moving_object_tracker</build_depend--> 
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>observer</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <!--run_depend>imes_3d_vision</run_depend>
  <run_depend>luh_youbot_gripper</run_depend>
  <run_depend>luh_youbot_message</run_depend>
  <run_depend>moving_object_tracker</run_depend-->
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
     <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
